--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
     "element-plus": "^2.10.2",
+    "font-awesome": "^4.7.0",
     "pinia": "^3.0.1",
+    "postcss": "^8.5.6",
+    "swiper": "^9.4.1",
+    "tailwindcss": "^4.1.10",
+    "vant": "^4.9.20",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -24,6 +32,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
+    "less": "^4.3.0",
     "prettier": "3.5.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
