--- a/package.json
+++ b/package.json
@@ -1,40 +1,27 @@
 {
-  "name": "mall_front",
+  "name": "newbee-mall-h5-v3",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite --open",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.10.0",
-    "element-plus": "^2.10.2",
-    "font-awesome": "^4.7.0",
-    "pinia": "^3.0.1",
-    "postcss": "^8.5.6",
-    "swiper": "^9.4.1",
-    "tailwindcss": "^4.1.10",
-    "vant": "^4.9.20",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "axios": "^1.2.6",
+    "better-scroll": "^2.3.0",
+    "js-md5": "^0.7.3",
+    "lib-flexible": "^0.3.2",
+    "pinia": "^2.0.28",
+    "vant": "^4.0.9",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vitejs/plugin-vue-jsx": "^4.1.2",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-vue": "~10.0.0",
-    "globals": "^16.0.0",
-    "less": "^4.3.0",
-    "prettier": "3.5.3",
-    "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "less": "^4.1.3",
+    "postcss-pxtorem": "^6.0.0",
+    "unplugin-vue-components": "^0.23.0",
+    "vite": "^4.0.4"
   }
 }
